# open-aoi

./: .dockerignore  .env  .gitignore  ReadMe.md  commands.txt  design.drawio  docker-compose.yml  dockerfile.aoi  dockerfile.aoi-ros2  requirements.dev.txt  requirements.prod.txt  requirements.txt  settings.py
common/: create_file_system.sh  install.sh
core/: settings.py
development/: reduced_component_dataset_preparation.ipynb
open_aoi/: .gitignore  README.md  pyproject.toml
open_aoi/src/: models.py  settings.py
open_aoi/src/mixins/: accessor.py  inspection_profile.py
open_aoi/src/open_aoi/: models.py  settings.py
open_aoi/src/open_aoi/mixins/: accessor.py  inspection_record.py  template.py
open_aoi/src/open_aoi/scripts/: db_create_all.py  db_create_assets.py
open_aoi/src/open_aoi/services/interface_web/: main.py
open_aoi/src/open_aoi/services/interface_web/views/: common.py  utils.py  view_access.py  view_home.py
open_aoi/src/open_aoi_web_interface/: main.py
open_aoi/src/open_aoi_web_interface/views/: common.py  utils.py  view_access.py  view_devices.py  view_home.py
open_aoi/src/scripts/: db_create_all.py  db_create_assets.py
open_aoi/src/services/interface_web/: main.py
open_aoi/src/services/interface_web/views/: common.py  utils.py  view_access.py  view_home.py
open_aoi_ros/: .gitignore  CMakeLists.txt  aoi.build.bash  aoi.launch.bash  aoi.setup.bash  package.xml  requirements.txt
playground/: .gitignore  requirements.txt  results.pickle  ros2.ipynb  test_pylon.ipynb  test_ros2.ipynb  tests.pickle
research/: _index.json  _index_clean.json  component_presence_detection.ipynb  reduced_component_dataset_preparation.ipynb
scripts/: fetch_datasets.py  (+2 more)
(+59 files in other folders)
